crates/mapal-rewrite/tests/snapshots/golden__calc_mermaid.snap
---
source: crates/mapal-rewrite/tests/golden.rs
expression: res.ir.to_mermaid()
---
flowchart LR
    subgraph f0["fn main"]
        f0o0(("io"))
        f0o1(("ret: io"))
        f0o2(("0: i32"))
        f0o3(("20: i32"))
        f0o4(("6: i32"))
        f0o5(("#quot;20 + 6 = #quot;: str"))
        f0o6(("1: i32"))
        f0o7(("20: i32"))
        f0o8(("6: i32"))
        f0o9(("#quot;20 - 6 = #quot;: str"))
        f0o10(("2: i32"))
        f0o11(("20: i32"))
        f0o12(("6: i32"))
        f0o13(("#quot;20 * 6 = #quot;: str"))
        f0o14(("3: i32"))
        f0o15(("20: i32"))
        f0o16(("6: i32"))
        f0o17(("#quot;20 / 6 = #quot;: str"))
        f0o18(("4: i32"))
        f0o19(("20: i32"))
        f0o20(("6: i32"))
        f0o21(("#quot;20 % 6 = #quot;: str"))
        f0o22(("0: i32"))
        f0o23(("1: i32"))
        f0o24(("2: i32"))
        f0o25(("3: i32"))
        f0o26(("0: i32"))
        f0o27(("1: i32"))
        f0o28(("2: i32"))
        f0o29(("3: i32"))
        f0o30(("0: i32"))
        f0o31(("1: i32"))
        f0o32(("2: i32"))
        f0o33(("3: i32"))
        f0o34(("0: i32"))
        f0o35(("1: i32"))
        f0o36(("2: i32"))
        f0o37(("3: i32"))
        f0o38(("0: i32"))
        f0o39(("1: i32"))
        f0o40(("2: i32"))
        f0o41(("3: i32"))
        f0o42(("26: i32"))
        f0o43(("14: i32"))
        f0o44(("120: i32"))
        f0o45(("3: i32"))
        f0o46(("2: i32"))
        f0o47(("26: i32"))
        f0o48(("14: i32"))
        f0o49(("120: i32"))
        f0o50(("3: i32"))
        f0o51(("2: i32"))
        f0o52(("26: i32"))
        f0o53(("14: i32"))
        f0o54(("120: i32"))
        f0o55(("3: i32"))
        f0o56(("2: i32"))
        f0o57(("26: i32"))
        f0o58(("14: i32"))
        f0o59(("120: i32"))
        f0o60(("3: i32"))
        f0o61(("2: i32"))
        f0o62(("26: i32"))
        f0o63(("14: i32"))
        f0o64(("120: i32"))
        f0o65(("3: i32"))
        f0o66(("2: i32"))
        f0o67(("true: bool"))
        f0o68(("false: bool"))
        f0o69(("false: bool"))
        f0o70(("false: bool"))
        f0o71(("false: bool"))
        f0o72(("true: bool"))
        f0o73(("false: bool"))
        f0o74(("false: bool"))
        f0o75(("false: bool"))
        f0o76(("false: bool"))
        f0o77(("true: bool"))
        f0o78(("false: bool"))
        f0o79(("false: bool"))
        f0o80(("false: bool"))
        f0o81(("false: bool"))
        f0o82(("true: bool"))
        f0o83(("false: bool"))
        f0o84(("false: bool"))
        f0o85(("false: bool"))
        f0o86(("false: bool"))
        f0o87(("(io, str)"))
        f0o88(("io"))
        f0o89(("(io, i32)"))
        f0o90(("io"))
        f0o91(("(io, str)"))
        f0o92(("io"))
        f0o93(("(io, i32)"))
        f0o94(("io"))
        f0o95(("(io, str)"))
        f0o96(("io"))
        f0o97(("(io, i32)"))
        f0o98(("io"))
        f0o99(("(io, str)"))
        f0o100(("io"))
        f0o101(("(io, i32)"))
        f0o102(("io"))
        f0o103(("(io, str)"))
        f0o104(("io"))
        f0o105(("(io, i32)"))
        f0o106(("io"))
        f0o0 -- "Pair 0/2" --> f0o87
        f0o5 -- "Pair 1/2" --> f0o87
        f0o87 -- "Print" --> f0o88
        f0o88 -- "Pair 0/2" --> f0o89
        f0o42 -- "Pair 1/2" --> f0o89
        f0o89 -- "Println" --> f0o90
        f0o90 -- "Pair 0/2" --> f0o91
        f0o9 -- "Pair 1/2" --> f0o91
        f0o91 -- "Print" --> f0o92
        f0o92 -- "Pair 0/2" --> f0o93
        f0o48 -- "Pair 1/2" --> f0o93
        f0o93 -- "Println" --> f0o94
        f0o94 -- "Pair 0/2" --> f0o95
        f0o13 -- "Pair 1/2" --> f0o95
        f0o95 -- "Print" --> f0o96
        f0o96 -- "Pair 0/2" --> f0o97
        f0o54 -- "Pair 1/2" --> f0o97
        f0o97 -- "Println" --> f0o98
        f0o98 -- "Pair 0/2" --> f0o99
        f0o17 -- "Pair 1/2" --> f0o99
        f0o99 -- "Print" --> f0o100
        f0o100 -- "Pair 0/2" --> f0o101
        f0o60 -- "Pair 1/2" --> f0o101
        f0o101 -- "Println" --> f0o102
        f0o102 -- "Pair 0/2" --> f0o103
        f0o21 -- "Pair 1/2" --> f0o103
        f0o103 -- "Print" --> f0o104
        f0o104 -- "Pair 0/2" --> f0o105
        f0o66 -- "Pair 1/2" --> f0o105
        f0o105 -- "Println" --> f0o106
        f0o106 -- "Output" --> f0o1
    end
