crates/mapal-rewrite/tests/snapshots/golden__calc_report.snap
---
source: crates/mapal-rewrite/tests/golden.rs
expression: "format!(\"{:#?}\", res.report)"
---
RewriteReport {
    rounds: 4,
    applied: [
        (
            Inline,
            5,
        ),
        (
            ConstFold,
            80,
        ),
        (
            Dce,
            5,
        ),
    ],
    skipped_non_canonical: false,
}
