crates/mapal-rewrite/tests/snapshots/golden__matmul4_loop_mermaid.snap
---
source: crates/mapal-rewrite/tests/golden.rs
expression: res.ir.to_mermaid()
---
flowchart LR
    subgraph f0["fn main"]
        f0o0(("io"))
        f0o1(("ret: io"))
        f0o2(("-37.0: f32"))
        f0o3(("-30.0: f32"))
        f0o4(("-23.0: f32"))
        f0o5(("-16.0: f32"))
        f0o6(("-9.0: f32"))
        f0o7(("-2.0: f32"))
        f0o8(("5.0: f32"))
        f0o9(("12.0: f32"))
        f0o10(("19.0: f32"))
        f0o11(("26.0: f32"))
        f0o12(("33.0: f32"))
        f0o13(("40.0: f32"))
        f0o14(("47.0: f32"))
        f0o15(("-47.0: f32"))
        f0o16(("-40.0: f32"))
        f0o17(("-33.0: f32"))
        f0o18(("7.0: f32"))
        f0o19(("14.0: f32"))
        f0o20(("21.0: f32"))
        f0o21(("28.0: f32"))
        f0o22(("35.0: f32"))
        f0o23(("42.0: f32"))
        f0o24(("49.0: f32"))
        f0o25(("-45.0: f32"))
        f0o26(("-38.0: f32"))
        f0o27(("-31.0: f32"))
        f0o28(("-24.0: f32"))
        f0o29(("-17.0: f32"))
        f0o30(("-10.0: f32"))
        f0o31(("-3.0: f32"))
        f0o32(("4.0: f32"))
        f0o33(("11.0: f32"))
        f0o34(("0: i32"))
        f0o35(("15: i32"))
        f0o36(("0: i32"))
        f0o37(("16: i32"))
        f0o38(("4: i32"))
        f0o39(("4: i32"))
        f0o40(("1: i32"))
        f0o41(("16: i32"))
        f0o42(("[i32; 16]"))
        f0o43(("a: [f32; 16]"))
        f0o44(("b: [f32; 16]"))
        f0o45(("([f32; 16], [f32; 16], [i32; 16])"))
        f0o46(("c: [f32; 16]"))
        f0o47(("([f32; 16], i32)"))
        f0o48(("f32"))
        f0o49(("(io, f32)"))
        f0o50(("io"))
        f0o51(("([f32; 16], i32)"))
        f0o52(("f32"))
        f0o53(("(io, f32)"))
        f0o54(("io"))
        f0o41 -- "Iota" --> f0o42
        f0o2 -- "Pair 0/16" --> f0o43
        f0o3 -- "Pair 1/16" --> f0o43
        f0o4 -- "Pair 2/16" --> f0o43
        f0o5 -- "Pair 3/16" --> f0o43
        f0o6 -- "Pair 4/16" --> f0o43
        f0o7 -- "Pair 5/16" --> f0o43
        f0o8 -- "Pair 6/16" --> f0o43
        f0o9 -- "Pair 7/16" --> f0o43
        f0o10 -- "Pair 8/16" --> f0o43
        f0o11 -- "Pair 9/16" --> f0o43
        f0o12 -- "Pair 10/16" --> f0o43
        f0o13 -- "Pair 11/16" --> f0o43
        f0o14 -- "Pair 12/16" --> f0o43
        f0o15 -- "Pair 13/16" --> f0o43
        f0o16 -- "Pair 14/16" --> f0o43
        f0o17 -- "Pair 15/16" --> f0o43
        f0o18 -- "Pair 0/16" --> f0o44
        f0o19 -- "Pair 1/16" --> f0o44
        f0o20 -- "Pair 2/16" --> f0o44
        f0o21 -- "Pair 3/16" --> f0o44
        f0o22 -- "Pair 4/16" --> f0o44
        f0o23 -- "Pair 5/16" --> f0o44
        f0o24 -- "Pair 6/16" --> f0o44
        f0o25 -- "Pair 7/16" --> f0o44
        f0o26 -- "Pair 8/16" --> f0o44
        f0o27 -- "Pair 9/16" --> f0o44
        f0o28 -- "Pair 10/16" --> f0o44
        f0o29 -- "Pair 11/16" --> f0o44
        f0o30 -- "Pair 12/16" --> f0o44
        f0o31 -- "Pair 13/16" --> f0o44
        f0o32 -- "Pair 14/16" --> f0o44
        f0o33 -- "Pair 15/16" --> f0o44
        f0o43 -- "Pair 0/3" --> f0o45
        f0o44 -- "Pair 1/3" --> f0o45
        f0o42 -- "Pair 2/3" --> f0o45
        f0o45 -- "Map (+2 caps)" --> f0o46
        f0o46 -- "Pair 0/2" --> f0o47
        f0o34 -- "Pair 1/2" --> f0o47
        f0o47 -- "Index" --> f0o48
        f0o0 -- "Pair 0/2" --> f0o49
        f0o48 -- "Pair 1/2" --> f0o49
        f0o49 -- "Println" --> f0o50
        f0o46 -- "Pair 0/2" --> f0o51
        f0o35 -- "Pair 1/2" --> f0o51
        f0o51 -- "Index" --> f0o52
        f0o50 -- "Pair 0/2" --> f0o53
        f0o52 -- "Pair 1/2" --> f0o53
        f0o53 -- "Println" --> f0o54
        f0o54 -- "Output" --> f0o1
    end
    subgraph f1["fn lift_fold$0"]
        f1o0(("([f32; 16], [f32; 16], i32, i32, f32, i32)"))
        f1o1(("ret: f32"))
        f1o2(("4: i32"))
        f1o3(("4: i32"))
        f1o4(("[f32; 16]"))
        f1o5(("[f32; 16]"))
        f1o6(("i32"))
        f1o7(("i32"))
        f1o8(("f32"))
        f1o9(("i32"))
        f1o10(("(i32, i32)"))
        f1o11(("i32"))
        f1o12(("(i32, i32)"))
        f1o13(("i32"))
        f1o14(("([f32; 16], i32)"))
        f1o15(("f32"))
        f1o16(("(i32, i32)"))
        f1o17(("i32"))
        f1o18(("(i32, i32)"))
        f1o19(("i32"))
        f1o20(("([f32; 16], i32)"))
        f1o21(("f32"))
        f1o22(("(f32, f32)"))
        f1o23(("f32"))
        f1o24(("(f32, f32)"))
        f1o0 -- "Proj 0" --> f1o4
        f1o0 -- "Proj 1" --> f1o5
        f1o0 -- "Proj 2" --> f1o6
        f1o0 -- "Proj 3" --> f1o7
        f1o0 -- "Proj 4" --> f1o8
        f1o0 -- "Proj 5" --> f1o9
        f1o6 -- "Pair 0/2" --> f1o10
        f1o2 -- "Pair 1/2" --> f1o10
        f1o10 -- "Mul" --> f1o11
        f1o11 -- "Pair 0/2" --> f1o12
        f1o9 -- "Pair 1/2" --> f1o12
        f1o12 -- "Add" --> f1o13
        f1o4 -- "Pair 0/2" --> f1o14
        f1o13 -- "Pair 1/2" --> f1o14
        f1o14 -- "Index" --> f1o15
        f1o9 -- "Pair 0/2" --> f1o16
        f1o3 -- "Pair 1/2" --> f1o16
        f1o16 -- "Mul" --> f1o17
        f1o17 -- "Pair 0/2" --> f1o18
        f1o7 -- "Pair 1/2" --> f1o18
        f1o18 -- "Add" --> f1o19
        f1o5 -- "Pair 0/2" --> f1o20
        f1o19 -- "Pair 1/2" --> f1o20
        f1o20 -- "Index" --> f1o21
        f1o15 -- "Pair 0/2" --> f1o22
        f1o21 -- "Pair 1/2" --> f1o22
        f1o22 -- "Mul" --> f1o23
        f1o8 -- "Pair 0/2" --> f1o24
        f1o23 -- "Pair 1/2" --> f1o24
        f1o24 -- "Add" --> f1o1
    end
    subgraph f2["fn lift_map$1"]
        f2o0(("([f32; 16], [f32; 16], i32)"))
        f2o1(("ret: f32"))
        f2o2(("4: i32"))
        f2o3(("4: i32"))
        f2o4(("0: i32"))
        f2o5(("0.0: f32"))
        f2o6(("4: i32"))
        f2o7(("4: i32"))
        f2o8(("4: i32"))
        f2o9(("1: i32"))
        f2o10(("4: i32"))
        f2o11(("[i32; 4]"))
        f2o12(("[f32; 16]"))
        f2o13(("[f32; 16]"))
        f2o14(("i32"))
        f2o15(("(i32, i32)"))
        f2o16(("i: i32"))
        f2o17(("(i32, i32)"))
        f2o18(("j: i32"))
        f2o19(("([f32; 16], [f32; 16], i32, i32, f32, [i32; 4])"))
        f2o10 -- "Iota" --> f2o11
        f2o0 -- "Proj 0" --> f2o12
        f2o0 -- "Proj 1" --> f2o13
        f2o0 -- "Proj 2" --> f2o14
        f2o14 -- "Pair 0/2" --> f2o15
        f2o2 -- "Pair 1/2" --> f2o15
        f2o15 -- "Div" --> f2o16
        f2o14 -- "Pair 0/2" --> f2o17
        f2o3 -- "Pair 1/2" --> f2o17
        f2o17 -- "Mod" --> f2o18
        f2o12 -- "Pair 0/6" --> f2o19
        f2o13 -- "Pair 1/6" --> f2o19
        f2o16 -- "Pair 2/6" --> f2o19
        f2o18 -- "Pair 3/6" --> f2o19
        f2o5 -- "Pair 4/6" --> f2o19
        f2o11 -- "Pair 5/6" --> f2o19
        f2o19 -- "Fold (+4 caps)" --> f2o1
    end
