crates/mapal-rewrite/tests/snapshots/golden__sepia_mermaid.snap
---
source: crates/mapal-rewrite/tests/golden.rs
expression: res.ir.to_mermaid()
---
flowchart LR
    subgraph f0["fn main"]
        f0o0(("io"))
        f0o1(("ret: io"))
        f0o2(("200.0: f32"))
        f0o3(("200.0: f32"))
        f0o4(("200.0: f32"))
        f0o5(("200.0: f32"))
        f0o6(("200.0: f32"))
        f0o7(("200.0: f32"))
        f0o8(("200.0: f32"))
        f0o9(("200.0: f32"))
        f0o10(("200.0: f32"))
        f0o11(("200.0: f32"))
        f0o12(("200.0: f32"))
        f0o13(("200.0: f32"))
        f0o14(("200.0: f32"))
        f0o15(("200.0: f32"))
        f0o16(("200.0: f32"))
        f0o17(("200.0: f32"))
        f0o18(("200.0: f32"))
        f0o19(("200.0: f32"))
        f0o20(("200.0: f32"))
        f0o21(("200.0: f32"))
        f0o22(("200.0: f32"))
        f0o23(("200.0: f32"))
        f0o24(("200.0: f32"))
        f0o25(("200.0: f32"))
        f0o26(("200.0: f32"))
        f0o27(("200.0: f32"))
        f0o28(("200.0: f32"))
        f0o29(("200.0: f32"))
        f0o30(("200.0: f32"))
        f0o31(("200.0: f32"))
        f0o32(("200.0: f32"))
        f0o33(("200.0: f32"))
        f0o34(("200.0: f32"))
        f0o35(("200.0: f32"))
        f0o36(("200.0: f32"))
        f0o37(("200.0: f32"))
        f0o38(("200.0: f32"))
        f0o39(("200.0: f32"))
        f0o40(("200.0: f32"))
        f0o41(("200.0: f32"))
        f0o42(("200.0: f32"))
        f0o43(("200.0: f32"))
        f0o44(("200.0: f32"))
        f0o45(("200.0: f32"))
        f0o46(("200.0: f32"))
        f0o47(("200.0: f32"))
        f0o48(("200.0: f32"))
        f0o49(("200.0: f32"))
        f0o50(("0.0: f32"))
        f0o51(("Pixel"))
        f0o52(("Pixel"))
        f0o53(("Pixel"))
        f0o54(("Pixel"))
        f0o55(("Pixel"))
        f0o56(("Pixel"))
        f0o57(("Pixel"))
        f0o58(("Pixel"))
        f0o59(("Pixel"))
        f0o60(("Pixel"))
        f0o61(("Pixel"))
        f0o62(("Pixel"))
        f0o63(("Pixel"))
        f0o64(("Pixel"))
        f0o65(("Pixel"))
        f0o66(("Pixel"))
        f0o67(("image: [Pixel; 16]"))
        f0o68(("sepia_image: [Pixel; 16]"))
        f0o69(("(f32, [Pixel; 16])"))
        f0o70(("total_r: f32"))
        f0o71(("(io, f32)"))
        f0o72(("io"))
        f0o2 -- "Pair 0/3" --> f0o51
        f0o3 -- "Pair 1/3" --> f0o51
        f0o4 -- "Pair 2/3" --> f0o51
        f0o5 -- "Pair 0/3" --> f0o52
        f0o6 -- "Pair 1/3" --> f0o52
        f0o7 -- "Pair 2/3" --> f0o52
        f0o8 -- "Pair 0/3" --> f0o53
        f0o9 -- "Pair 1/3" --> f0o53
        f0o10 -- "Pair 2/3" --> f0o53
        f0o11 -- "Pair 0/3" --> f0o54
        f0o12 -- "Pair 1/3" --> f0o54
        f0o13 -- "Pair 2/3" --> f0o54
        f0o14 -- "Pair 0/3" --> f0o55
        f0o15 -- "Pair 1/3" --> f0o55
        f0o16 -- "Pair 2/3" --> f0o55
        f0o17 -- "Pair 0/3" --> f0o56
        f0o18 -- "Pair 1/3" --> f0o56
        f0o19 -- "Pair 2/3" --> f0o56
        f0o20 -- "Pair 0/3" --> f0o57
        f0o21 -- "Pair 1/3" --> f0o57
        f0o22 -- "Pair 2/3" --> f0o57
        f0o23 -- "Pair 0/3" --> f0o58
        f0o24 -- "Pair 1/3" --> f0o58
        f0o25 -- "Pair 2/3" --> f0o58
        f0o26 -- "Pair 0/3" --> f0o59
        f0o27 -- "Pair 1/3" --> f0o59
        f0o28 -- "Pair 2/3" --> f0o59
        f0o29 -- "Pair 0/3" --> f0o60
        f0o30 -- "Pair 1/3" --> f0o60
        f0o31 -- "Pair 2/3" --> f0o60
        f0o32 -- "Pair 0/3" --> f0o61
        f0o33 -- "Pair 1/3" --> f0o61
        f0o34 -- "Pair 2/3" --> f0o61
        f0o35 -- "Pair 0/3" --> f0o62
        f0o36 -- "Pair 1/3" --> f0o62
        f0o37 -- "Pair 2/3" --> f0o62
        f0o38 -- "Pair 0/3" --> f0o63
        f0o39 -- "Pair 1/3" --> f0o63
        f0o40 -- "Pair 2/3" --> f0o63
        f0o41 -- "Pair 0/3" --> f0o64
        f0o42 -- "Pair 1/3" --> f0o64
        f0o43 -- "Pair 2/3" --> f0o64
        f0o44 -- "Pair 0/3" --> f0o65
        f0o45 -- "Pair 1/3" --> f0o65
        f0o46 -- "Pair 2/3" --> f0o65
        f0o47 -- "Pair 0/3" --> f0o66
        f0o48 -- "Pair 1/3" --> f0o66
        f0o49 -- "Pair 2/3" --> f0o66
        f0o51 -- "Pair 0/16" --> f0o67
        f0o52 -- "Pair 1/16" --> f0o67
        f0o53 -- "Pair 2/16" --> f0o67
        f0o54 -- "Pair 3/16" --> f0o67
        f0o55 -- "Pair 4/16" --> f0o67
        f0o56 -- "Pair 5/16" --> f0o67
        f0o57 -- "Pair 6/16" --> f0o67
        f0o58 -- "Pair 7/16" --> f0o67
        f0o59 -- "Pair 8/16" --> f0o67
        f0o60 -- "Pair 9/16" --> f0o67
        f0o61 -- "Pair 10/16" --> f0o67
        f0o62 -- "Pair 11/16" --> f0o67
        f0o63 -- "Pair 12/16" --> f0o67
        f0o64 -- "Pair 13/16" --> f0o67
        f0o65 -- "Pair 14/16" --> f0o67
        f0o66 -- "Pair 15/16" --> f0o67
        f0o67 -- "Map" --> f0o68
        f0o50 -- "Pair 0/2" --> f0o69
        f0o68 -- "Pair 1/2" --> f0o69
        f0o69 -- "Fold" --> f0o70
        f0o0 -- "Pair 0/2" --> f0o71
        f0o70 -- "Pair 1/2" --> f0o71
        f0o71 -- "Println" --> f0o72
        f0o72 -- "Output" --> f0o1
    end
    subgraph f1["fn main::map@0"]
        f1o0(("Pixel"))
        f1o1(("ret: Pixel"))
        f1o2(("0.393: f32"))
        f1o3(("0.769: f32"))
        f1o4(("0.189: f32"))
        f1o5(("0.0: f32"))
        f1o6(("255.0: f32"))
        f1o7(("0.349: f32"))
        f1o8(("0.686: f32"))
        f1o9(("0.168: f32"))
        f1o10(("0.0: f32"))
        f1o11(("255.0: f32"))
        f1o12(("0.272: f32"))
        f1o13(("0.534: f32"))
        f1o14(("0.131: f32"))
        f1o15(("0.0: f32"))
        f1o16(("255.0: f32"))
        f1o17(("f32"))
        f1o18(("f32"))
        f1o19(("f32"))
        f1o20(("(f32, f32)"))
        f1o21(("f32"))
        f1o22(("(f32, f32)"))
        f1o23(("f32"))
        f1o24(("(f32, f32)"))
        f1o25(("f32"))
        f1o26(("(f32, f32)"))
        f1o27(("f32"))
        f1o28(("(f32, f32)"))
        f1o29(("f32"))
        f1o30(("(f32, f32)"))
        f1o31(("f32"))
        f1o32(("(f32, f32)"))
        f1o33(("f32"))
        f1o34(("(f32, f32)"))
        f1o35(("f32"))
        f1o36(("(f32, f32)"))
        f1o37(("f32"))
        f1o38(("(f32, f32)"))
        f1o39(("f32"))
        f1o40(("(f32, f32)"))
        f1o41(("f32"))
        f1o42(("(f32, f32)"))
        f1o43(("f32"))
        f1o44(("(f32, f32)"))
        f1o45(("f32"))
        f1o46(("(f32, f32)"))
        f1o47(("f32"))
        f1o48(("(f32, f32)"))
        f1o49(("f32"))
        f1o50(("(f32, f32)"))
        f1o51(("bool"))
        f1o52(("(f32, f32)"))
        f1o53(("bool"))
        f1o54(("(f32, f32)"))
        f1o55(("bool"))
        f1o56(("(f32, f32)"))
        f1o57(("bool"))
        f1o58(("(f32, f32)"))
        f1o59(("bool"))
        f1o60(("(f32, f32)"))
        f1o61(("bool"))
        f1o62(("(f32, f32, bool)"))
        f1o63(("bounded: f32"))
        f1o64(("(f32, f32, bool)"))
        f1o65(("bounded: f32"))
        f1o66(("(f32, f32, bool)"))
        f1o67(("bounded: f32"))
        f1o68(("(f32, f32, bool)"))
        f1o69(("nr: f32"))
        f1o70(("(f32, f32, bool)"))
        f1o71(("ng: f32"))
        f1o72(("(f32, f32, bool)"))
        f1o73(("nb: f32"))
        f1o0 -- "Proj 0" --> f1o17
        f1o0 -- "Proj 1" --> f1o18
        f1o0 -- "Proj 2" --> f1o19
        f1o17 -- "Pair 0/2" --> f1o20
        f1o2 -- "Pair 1/2" --> f1o20
        f1o20 -- "Mul" --> f1o21
        f1o17 -- "Pair 0/2" --> f1o22
        f1o7 -- "Pair 1/2" --> f1o22
        f1o22 -- "Mul" --> f1o23
        f1o17 -- "Pair 0/2" --> f1o24
        f1o12 -- "Pair 1/2" --> f1o24
        f1o24 -- "Mul" --> f1o25
        f1o18 -- "Pair 0/2" --> f1o26
        f1o3 -- "Pair 1/2" --> f1o26
        f1o26 -- "Mul" --> f1o27
        f1o18 -- "Pair 0/2" --> f1o28
        f1o8 -- "Pair 1/2" --> f1o28
        f1o28 -- "Mul" --> f1o29
        f1o18 -- "Pair 0/2" --> f1o30
        f1o13 -- "Pair 1/2" --> f1o30
        f1o30 -- "Mul" --> f1o31
        f1o19 -- "Pair 0/2" --> f1o32
        f1o4 -- "Pair 1/2" --> f1o32
        f1o32 -- "Mul" --> f1o33
        f1o19 -- "Pair 0/2" --> f1o34
        f1o9 -- "Pair 1/2" --> f1o34
        f1o34 -- "Mul" --> f1o35
        f1o19 -- "Pair 0/2" --> f1o36
        f1o14 -- "Pair 1/2" --> f1o36
        f1o36 -- "Mul" --> f1o37
        f1o21 -- "Pair 0/2" --> f1o38
        f1o27 -- "Pair 1/2" --> f1o38
        f1o38 -- "Add" --> f1o39
        f1o23 -- "Pair 0/2" --> f1o40
        f1o29 -- "Pair 1/2" --> f1o40
        f1o40 -- "Add" --> f1o41
        f1o25 -- "Pair 0/2" --> f1o42
        f1o31 -- "Pair 1/2" --> f1o42
        f1o42 -- "Add" --> f1o43
        f1o39 -- "Pair 0/2" --> f1o44
        f1o33 -- "Pair 1/2" --> f1o44
        f1o44 -- "Add" --> f1o45
        f1o41 -- "Pair 0/2" --> f1o46
        f1o35 -- "Pair 1/2" --> f1o46
        f1o46 -- "Add" --> f1o47
        f1o43 -- "Pair 0/2" --> f1o48
        f1o37 -- "Pair 1/2" --> f1o48
        f1o48 -- "Add" --> f1o49
        f1o45 -- "Pair 0/2" --> f1o50
        f1o5 -- "Pair 1/2" --> f1o50
        f1o50 -- "Lt" --> f1o51
        f1o45 -- "Pair 0/2" --> f1o52
        f1o6 -- "Pair 1/2" --> f1o52
        f1o52 -- "Gt" --> f1o53
        f1o47 -- "Pair 0/2" --> f1o54
        f1o10 -- "Pair 1/2" --> f1o54
        f1o54 -- "Lt" --> f1o55
        f1o47 -- "Pair 0/2" --> f1o56
        f1o11 -- "Pair 1/2" --> f1o56
        f1o56 -- "Gt" --> f1o57
        f1o49 -- "Pair 0/2" --> f1o58
        f1o15 -- "Pair 1/2" --> f1o58
        f1o58 -- "Lt" --> f1o59
        f1o49 -- "Pair 0/2" --> f1o60
        f1o16 -- "Pair 1/2" --> f1o60
        f1o60 -- "Gt" --> f1o61
        f1o5 -- "Pair 0/3" --> f1o62
        f1o45 -- "Pair 1/3" --> f1o62
        f1o51 -- "Pair 2/3" --> f1o62
        f1o62 -- "Phi" --> f1o63
        f1o10 -- "Pair 0/3" --> f1o64
        f1o47 -- "Pair 1/3" --> f1o64
        f1o55 -- "Pair 2/3" --> f1o64
        f1o64 -- "Phi" --> f1o65
        f1o15 -- "Pair 0/3" --> f1o66
        f1o49 -- "Pair 1/3" --> f1o66
        f1o59 -- "Pair 2/3" --> f1o66
        f1o66 -- "Phi" --> f1o67
        f1o6 -- "Pair 0/3" --> f1o68
        f1o63 -- "Pair 1/3" --> f1o68
        f1o53 -- "Pair 2/3" --> f1o68
        f1o68 -- "Phi" --> f1o69
        f1o11 -- "Pair 0/3" --> f1o70
        f1o65 -- "Pair 1/3" --> f1o70
        f1o57 -- "Pair 2/3" --> f1o70
        f1o70 -- "Phi" --> f1o71
        f1o16 -- "Pair 0/3" --> f1o72
        f1o67 -- "Pair 1/3" --> f1o72
        f1o61 -- "Pair 2/3" --> f1o72
        f1o72 -- "Phi" --> f1o73
        f1o69 -- "Pair 0/3" --> f1o1
        f1o71 -- "Pair 1/3" --> f1o1
        f1o73 -- "Pair 2/3" --> f1o1
    end
    subgraph f2["fn main::fold@1"]
        f2o0(("(f32, Pixel)"))
        f2o1(("ret: f32"))
        f2o2(("f32"))
        f2o3(("Pixel"))
        f2o4(("f32"))
        f2o5(("(f32, f32)"))
        f2o0 -- "Proj 0" --> f2o2
        f2o0 -- "Proj 1" --> f2o3
        f2o3 -- "Proj 0" --> f2o4
        f2o2 -- "Pair 0/2" --> f2o5
        f2o4 -- "Pair 1/2" --> f2o5
        f2o5 -- "Add" --> f2o1
    end
